--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     </section>
   </main>
   <footer>
-    <p>Copyright &copy; 2023 Belts Website</p>
+    <p>Copyright &copy; 2023 Website</p>
   </footer>
 </body>
 </html>
